--- a/servicos.html
+++ b/servicos.html
@@ -6,18 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nutricionista Jeruza Campos</title>
 
-    <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/prettyPhoto.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" />	
-    <!-- =======================================================
-        Theme Name: Company
-        Theme URL: https://bootstrapmade.com/company-free-html-bootstrap-template/
-        Author: BootstrapMade
-        Author URL: https://bootstrapmade.com
-    ======================================================= -->
+
   </head>
   <body>
 	<header>		
@@ -58,21 +52,21 @@
 		<h3 style="padding-top: 20px">Tudo para sua empresa</h3>
 		<p style="margin-top: -21px">Aqui você encontra tudo o que sua emprecisa precisa para crescer com segurança e qualidade!</p>
 		<hr>
-			<div class="col-md-3">
-				<img src="images/services/visita.svg" style="width: 65%" class="col-md-offset-2">
-				<p style="text-align: center;">Visitas técnicas periódicas à sua empresa visando a adequação frente a ANVISA, desde a estrutura até treinamentos. </p>
+			<div class="col-md-3 col-sm-12" style="text-align: center;">
+				<img src="images/services/visita.svg" style="width: 65%">
+				<p>Visitas técnicas periódicas à sua empresa visando a adequação frente a ANVISA, desde a estrutura até treinamentos. </p>
 			</div>
-			<div class="col-md-3">
-				<img src="images/services/fichatecnica.svg" style="width: 65%" class="col-md-offset-2">
-				<p style="text-align: center;">Elaboração de fichas técnicas para padronização das receitas e redução de custos. </p>
+			<div class="col-md-3 col-sm-12" style="text-align: center;">
+				<img src="images/services/fichatecnica.svg" style="width: 65%">
+				<p>Elaboração de fichas técnicas para padronização das receitas e redução de custos. </p>
 			</div>
-			<div class="col-md-3">
-				<img src="images/services/palestra.svg" style="width: 65%" class="col-md-offset-2">
-				<p style="text-align: center;">Treinamentos e cursos de capacitação, palestras motivacionais e de conscientização sanitária. </p>
+			<div class="col-md-3 col-sm-12" style="text-align: center;">
+				<img src="images/services/palestra.svg" style="width: 65%">
+				<p>Treinamentos e cursos de capacitação, palestras motivacionais e de conscientização sanitária. </p>
 			</div>
-			<div class="col-md-3">
-				<img src="images/services/cozinha.svg" style="width: 65%" class="col-md-offset-2">
-				<p style="text-align: center;">Assessoria no planejamento de cozinhas e acompanhamento de obras. </p>
+			<div class="col-md-3 col-sm-12" style="text-align: center;">
+				<img src="images/services/cozinha.svg" style="width: 65%">
+				<p>Assessoria no planejamento de cozinhas e acompanhamento de obras. </p>
 			</div>
 
 			
@@ -237,6 +231,133 @@
 						
 			<div class="col-md-6">
 				<img src="images/services/manual.jpg" class="img-responsive">
+			</div>
+		</div>
+	</div>
+
+	<div class="services" style="padding-top: 5%">
+		<div class="container">
+			<div class="col-md-6">
+				<img src="images/services/infonutricional.jpg" class="img-responsive">
+			</div>
+			
+			<div class="col-md-6">
+				<div class="media">
+					<ul>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-info-circle"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Informação Nutricional</h4>
+								<p>Atualmente um dos atributos mais importantes para o consumidor e a sociedade em geral.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-eye"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Observe</h4>
+								<p>É por meio dela que se pode visualizar as propriedades dos alimentos e suas respectivas porções.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-check-square-o"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Comprove</h4>
+								<p>Elimine dúvidas sobre substâncias que podem fazer bem ou mal para a saúde de seus consumidores.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="sub-services">
+		<div class="container">
+			<div class="col-md-6">
+				<div class="media">
+					<ul>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-book"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Validação de Procedimentos - Analises Microbiologicas</h4>
+								<p>Colete de amostras de alimentos, água do manipulador, equipamentos e superficies e faça o acompanhamento.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-shield"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Segurança</h4>
+								<p>Utilize parametros que asseguram a diminuição das intercorrências causadoras de DTAS ( doenças transmitidas por alimentos ), que podem causar serios danos a saúde.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-users"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Apoio</h4>
+								<p>Contamos com apoio de empresas parceiras onde são feitas as análises microbiológicas e físico químicas dos alimentos, água, ambientes e manipuladores, 
+seguindo os padrões legislativos.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+						
+			<div class="col-md-6">
+				<img src="images/services/micro.jpg" class="img-responsive">
+			</div>
+		</div>
+	</div>
+
+	<div class="services" style="padding-top: 5%">
+		<div class="container">
+			<div class="col-md-6">
+				<img src="images/services/fornecedores.jpg" class="img-responsive">
+			</div>
+			
+			<div class="col-md-6">
+				<div class="media">
+					<ul>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-thumbs-o-up"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Assessoria Técnica Periódica e Pontual</h4>
+								<p>Tenha assistência para identificar e qualificar seus fornecedores.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-lock"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Garantia</h4>
+								<p>Receba sempre suas mercadorias com a qualidade esperada.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-smile-o"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Excelência</h4>
+								<p>Mantenha a excelência de seu produto todos os dias e conquiste seus clientes.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
