--- a/servicos.html
+++ b/servicos.html
@@ -362,6 +362,88 @@ seguindo os padrões legislativos.</p>
 		</div>
 	</div>
 	
+	<div class="sub-services">
+		<div class="container">
+			<div class="col-md-6">
+				<div class="media">
+					<ul>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-cutlery"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Responsabilidade Técnica e PAT</h4>
+								<p>O Programa de Alimentação do Trabalhador (PAT) foi instituído pela Lei nº 6.321/1976 e regulamentado pelo Decreto nº 5/1991. Prioriza atendimentos aos trabalhadores de baixa renda e é estruturado na parceria entre Governo Federal, empresa e trabalhador.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-file-text-o"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Dentro da Lei</h4>
+								<p>É permitido às pessoas jurídicas tributadas com base no lucro real deduzir do Imposto de Renda devido, a título de incentivo fiscal, entre outros, o valor correspondente á aplicação da alíquota do imposto sobre a soma das despesas de custeio realizadas no período em Programas de Alimentação do Trabalhador (PAT).</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-heart-o"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Satisfação</h4>
+								<p>Veja a produtividade aumentar com a alimentação correta para seus colaboradores.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>		
+			<div class="col-md-6">
+				<img src="images/services/pat.jpg" class="img-responsive">
+			</div>
+		</div>
+	</div>
+
+	<div class="services" style="padding-top: 5%">
+		<div class="container">
+			<div class="col-md-6">
+				<img src="images/services/fornecedores.jpg" class="img-responsive">
+			</div>
+			
+			<div class="col-md-6">
+				<div class="media">
+					<ul>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-thumbs-o-up"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Registro Junto à Vigilância Sanitária</h4>
+								<p>Tenha assistência para identificar e qualificar seus fornecedores.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-lock"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Garantia</h4>
+								<p>Receba sempre suas mercadorias com a qualidade esperada.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-smile-o"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Excelência</h4>
+								<p>Mantenha a excelência de seu produto todos os dias e conquiste seus clientes.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 	<footer>
 		<div class="footer">
