--- a/servicos.html
+++ b/servicos.html
@@ -406,7 +406,7 @@ seguindo os padrões legislativos.</p>
 	<div class="services" style="padding-top: 5%">
 		<div class="container">
 			<div class="col-md-6">
-				<img src="images/services/fornecedores.jpg" class="img-responsive">
+				<img src="images/services/vigilancia.jpg" class="img-responsive">
 			</div>
 			
 			<div class="col-md-6">
@@ -414,29 +414,29 @@ seguindo os padrões legislativos.</p>
 					<ul>
 						<li>
 							<div class="media-left">
-								<i class="fa fa-thumbs-o-up"></i>						
+								<i class="fa fa-search"></i>						
 							</div>
 							<div class="media-body">
 								<h4 class="media-heading">Registro Junto à Vigilância Sanitária</h4>
-								<p>Tenha assistência para identificar e qualificar seus fornecedores.</p>
+								<p>Registre seu estabeleciomento e fique em dia com a limpeza.</p>
 							</div>
 						</li>
 						<li>
 							<div class="media-left">
-								<i class="fa fa-lock"></i>						
+								<i class="fa fa-anchor"></i>						
 							</div>
 							<div class="media-body">
-								<h4 class="media-heading">Garantia</h4>
-								<p>Receba sempre suas mercadorias com a qualidade esperada.</p>
+								<h4 class="media-heading">Consistência</h4>
+								<p>Tenha sempre a garantia de que seu estabelecimento é limpo e seu produto é seguro.</p>
 							</div>
 						</li>
 						<li>
 							<div class="media-left">
-								<i class="fa fa-smile-o"></i>						
+								<i class="fa fa-user-secret"></i>						
 							</div>
 							<div class="media-body">
-								<h4 class="media-heading">Excelência</h4>
-								<p>Mantenha a excelência de seu produto todos os dias e conquiste seus clientes.</p>
+								<h4 class="media-heading">Segurança</h4>
+								<p>Com o âmbiente controlado você pode confiar que seu produto sempre estará como você e seu cliente esperam.</p>
 							</div>
 						</li>
 					</ul>
