--- a/servicos.html
+++ b/servicos.html
@@ -445,6 +445,130 @@ seguindo os padrões legislativos.</p>
 		</div>
 	</div>
 	
+	<div class="sub-services">
+		<div class="container">
+			<div class="col-md-6">
+				<div class="media">
+					<ul>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-graduation-cap"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Alimentação Escolar</h4>
+								<p>Saiba como fornecer a alimentação necessária para seus alunos.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-lightbulb-o"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Capacitação</h4>
+								<p>Com merendeiras capacitadas sua escola evitará o desperdício e outros problemas.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-file-text"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Cardápios e Fichas Técnicas</h4>
+								<p>Aprenda a montar os cardápios e fichas técnicas corretamente.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>		
+			<div class="col-md-6">
+				<img src="images/services/escolar.jpg" class="img-responsive">
+			</div>
+		</div>
+	</div>
+
+	<div class="services" style="padding-top: 5%">
+		<div class="container">
+			<div class="col-md-6">
+				<img src="images/services/economia.jpg" class="img-responsive">
+			</div>
+			
+			<div class="col-md-6">
+				<div class="media">
+					<ul>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-money"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Projeto de Redução de Custos</h4>
+								<p>Aprenda a organizar seus cárdapios com inteligência e economize.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-crosshairs"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Eficiência</h4>
+								<p>Aprenda a ser mais eficiente em sua produção.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-line-chart"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Cresça</h4>
+								<p>Com o projeto certo, sua empresa tem tudo para crescer.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="sub-services">
+		<div class="container">
+			<div class="col-md-6">
+				<div class="media">
+					<ul>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-trash-o"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Gestão de Resíduos</h4>
+								<p>Lide melhor com seus resíduos e reduza a geração e eliminação de resíduos.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-tree"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Ecologicamente Correto</h4>
+								<p>Evite impactos negativos, propiciando níveis crescentes de qualidade de vida, saúde pública e bem estar social.</p>
+							</div>
+						</li>
+						<li>
+							<div class="media-left">
+								<i class="fa fa-recycle"></i>						
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">Recupere</h4>
+								<p>Reduza os custos de produção, possibilitando a recuperação de matérias-primas, aproveitáveis no processo de fabricação, ou comercializáveis para terceiros.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>		
+			<div class="col-md-6">
+				<img src="images/services/reciclar.jpg" class="img-responsive">
+			</div>
+		</div>
+	</div>
+	
 	<footer>
 		<div class="footer">
 			<div class="container">
