ajustes menu e serviços

--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/prettyPhoto.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" />	
-    <!-- =======================================================
-        Theme Name: Company
-        Theme URL: https://bootstrapmade.com/company-free-html-bootstrap-template/
-        Author: BootstrapMade
-        Author URL: https://bootstrapmade.com
-    ======================================================= -->
+
   </head>
   <body>
 	<header>		
@@ -40,7 +35,7 @@
 						<div class="menu">
 							<ul class="nav nav-tabs" role="tablist">
 								<li role="presentation"><a href="index.html" class="active">Home</a></li>
-								<li role="presentation"><a href="#">SOBRE MIM</a></li>
+								<li role="presentation"><a href="sobre.html">SOBRE MIM</a></li>
 								<li role="presentation"><a href="servicos.html">SERVIÇOS</a></li>
 								<li role="presentation"><a href="noticias.html">NOTÍCIAS</a></li>
 								<li role="presentation"><a href="#">CONTATO</a></li>
