--- a/servicos.html
+++ b/servicos.html
@@ -34,7 +34,7 @@
 						<div class="menu">
 							<ul class="nav nav-tabs" role="tablist">
 								<li role="presentation"><a href="index.html">Home</a></li>
-								<li role="presentation"><a href="#">SOBRE MIM</a></li>
+								<li role="presentation"><a href="sobre.html">SOBRE MIM</a></li>
 								<li role="presentation"><a href="#" class="active">SERVIÇOS</a></li>
 								<li role="presentation"><a href="noticias.html">NOTÍCIAS</a></li>
 								<li role="presentation"><a href="#">CONTATO</a></li>
