--- a/sobre.html
+++ b/sobre.html
@@ -12,12 +12,7 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/prettyPhoto.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" />	
-    <!-- =======================================================
-        Theme Name: Company
-        Theme URL: https://bootstrapmade.com/company-free-html-bootstrap-template/
-        Author: BootstrapMade
-        Author URL: https://bootstrapmade.com
-    ======================================================= -->
+
   </head>
   <body>
 	<header>		
@@ -39,8 +34,8 @@
 					<div class="navbar-collapse collapse">							
 						<div class="menu">
 							<ul class="nav nav-tabs" role="tablist">
-								<li role="presentation"><a href="index.html" class="active">Home</a></li>
-								<li role="presentation"><a href="sobre.html">SOBRE MIM</a></li>
+								<li role="presentation"><a href="index.html">Home</a></li>
+								<li role="presentation"><a href="sobre.html" class="active">SOBRE MIM</a></li>
 								<li role="presentation"><a href="servicos.html">SERVIÇOS</a></li>
 								<li role="presentation"><a href="noticias.html">NOTÍCIAS</a></li>
 								<li role="presentation"><a href="#">CONTATO</a></li>
@@ -106,7 +101,7 @@
 					<div class="col-md-4">
 						<ul class="social-network">
 							<li><a href="#" class="fb tool-tip" title="instagram" style="color:white;"><i class="fa fa-instagram"></i></a></li>
-							<li><a href="#" title="telefone" style="color:white;font-size: 20px;font-weight: bold ">+55 21 99999 - 9999</a></li>
+							<li><a href="#" title="telefone" style="color:white;font-size: 20px;font-weight: bold ">+55 21 98155 - 4696</a></li>
 						</ul>	
 					</div>
 				</div>
